--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc -p ./tsconfig.build.json",
     "dev": "ts-node-dev --respawn --ignore-watch node_modules --no-notify src/main.ts"
   },
   "repository": {
@@ -21,7 +21,10 @@
   },
   "homepage": "https://github.com/luabida/semantic-release-pr-title-check#readme",
   "dependencies": {
-    "ts-node-dev": "^2.0.0",
+    "ts-node-dev": "^2.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.11",
     "typescript": "^4.9.3"
   }
 }
