--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "semantic-release-pr-title-check",
   "version": "0.1.0",
   "description": "Checks for [Angular commit message format](https://github.com/angular/angular/blob/main/CONTRIBUTING.md#-commit-message-format) in the Pull Request Title.",
-  "main": "index.js",
+  "main": "build/main.js",
   "directories": {
     "test": "tests"
   },
