--- a/.github/workflows/pr-title-linter.yaml
+++ b/.github/workflows/pr-title-linter.yaml
@@ -9,18 +9,21 @@ jobs:
   pr-linter-test:
     name: PR Linter Test
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [18.x]
 
     steps:
       - uses: actions/checkout@v3
         with:
           ref: ${{ secrets.GITHUB_REF }}
 
-      - name: Use Node.js ^18.0
-        uses: actions/setup-node@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
         with:
-          node-version: 18.x
+          node-version: ${{ matrix.node-version }}
           cache: 'npm'
-          cache-dependency-path: package-lock.json
+          cache-dependency-path: '**/package-lock.json'
       
       - name: Install dependencies
         run: npm ci
