--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/luabida/semantic-release-pr-title-check#readme",
   "dependencies": {
+    "@actions/core": "^1.10.0",
+    "@actions/github": "^5.1.1",
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
