--- a/action.yaml
+++ b/action.yaml
@@ -5,4 +5,6 @@ description: 'Checks for Angular commit message format in the Pull Request title
 runs:
   using: 'node16'
   main: 'dist/main.js'
-
+  branding:
+    icon: check-circle
+    color: green
