--- a/.github/workflows/pr-title-linter.yaml
+++ b/.github/workflows/pr-title-linter.yaml
@@ -1,13 +1,36 @@
 name: PR Title Linter
 on:
   pull_request:
-    types: [assigned, unassigned, labeled, unlabeled, opened, reopened, edited, synchronize]
+    types: [opened, reopened, edited, synchronize]
     branches:
       - main
 
 jobs:
-  pr-linter:
+  pr-linter-test:
+    name: PR Linter Test
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [18.x]
+
     steps:
-    - name: Semantic Release PT Title Check
-      uses: luabida/semantic-release-pr-title-check@v0.1.1
+      - uses: actions/checkout@v3
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+          cache-dependency-path: '**/package-lock.json'
+      
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build
+        run: npm run build
+        
+      - name: Run main.js
+        uses: ./ 
+
+      - name: Semantic Release PR Title Check
+        uses: luabida/semantic-release-pr-title-check@v0.1.1
