--- a/action.yaml
+++ b/action.yaml
@@ -1,4 +1,4 @@
-name: 'Semantic Release PT Title Check'
+name: 'Semantic Release PR Title Check'
 author: 'Luã Bida Vacaro'
 description: 'Checks for Angular commit message format in the Pull Request title'
 branding:
@@ -7,7 +7,6 @@ branding:
 
 runs:
   using: 'node16'
-  main: 'dist/main.js'
-
+  main: 'dist/index.js'
 
 
