--- a/.github/workflows/pr-title-linter.yaml
+++ b/.github/workflows/pr-title-linter.yaml
@@ -16,21 +16,21 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-          cache-dependency-path: '**/package-lock.json'
+      # - name: Use Node.js ${{ matrix.node-version }}
+      #   uses: actions/setup-node@v2
+      #   with:
+      #     node-version: ${{ matrix.node-version }}
+      #     cache: 'npm'
+      #     cache-dependency-path: '**/package-lock.json'
       
-      - name: Install dependencies
-        run: npm ci
+      # - name: Install dependencies
+      #   run: npm ci
 
-      - name: Build
-        run: npm run build
+      # - name: Build
+      #   run: npm run build
         
-      - name: Run main.js
-        uses: ./ 
+      # - name: Run main.js
+      #   uses: ./ 
 
       - name: Semantic Release PR Title Check
-        uses: luabida/semantic-release-pr-title-check@v0.1.1
+        uses: luabida/semantic-release-pr-title-check@v0.1.2
