feat(sr-preset)!: add defaultcommits option to Semanti-Release preset

--- a/.github/workflows/pr-title-linter.yaml
+++ b/.github/workflows/pr-title-linter.yaml
@@ -16,3 +16,5 @@ jobs:
 
       - name: Semantic Release PR Title Check
         uses: osl-incubator/semantic-release-pr-title-check@v1.0.0
+        with:
+          convention-name: 'conventionalcommits'
