--- a/.github/workflows/pr-title-linter.yaml
+++ b/.github/workflows/pr-title-linter.yaml
@@ -16,5 +16,5 @@ jobs:
 
       - name: Semantic Release PR Title Check
         uses: osl-incubator/semantic-release-pr-title-check@v1.1.4
-        with:
-          convention-name: 'conventionalcommits'
+        # with:
+        #   convention-name: 'conventionalcommits'
